[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/racha/RachaAPI.gd" type="Script" id=1]
[ext_resource path="res://scripts/racha/JSON.cs" type="Script" id=2]
[ext_resource path="res://scripts/racha/AES.cs" type="Script" id=3]

[node name="RachaAPI" type="Control"]
margin_left = -52.0
margin_top = -52.0
margin_right = -12.0
margin_bottom = -12.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequestAPI" type="HTTPRequest" parent="."]

[node name="HTTPRequestBET" type="HTTPRequest" parent="."]

[node name="HTTPRequestBET_RES" type="HTTPRequest" parent="."]

[node name="HTTPRequestAPI_REPORT" type="HTTPRequest" parent="."]

[node name="HTTPRequestMaster" type="HTTPRequest" parent="."]

[node name="HTTPRequestMaster_AG" type="HTTPRequest" parent="."]

[node name="HTTPRequestMatchMaking" type="HTTPRequest" parent="."]

[node name="AES" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="str2json" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="APITimer" type="Timer" parent="."]
